--- a/website/package.json
+++ b/website/package.json
@@ -4,18 +4,18 @@
   "version": "1.0.0",
   "author": "HashiCorp",
   "dependencies": {
-    "@hashicorp/mktg-global-styles": "3.0.1",
-    "@hashicorp/nextjs-scripts": "16.3.0",
-    "@hashicorp/react-button": "4.0.0",
-    "@hashicorp/react-code-block": "3.0.3",
-    "@hashicorp/react-docs-page": "12.0.0",
-    "@hashicorp/react-hashi-stack-menu": "1.2.1-canary.0",
-    "@hashicorp/react-head": "1.1.6",
+    "@hashicorp/mktg-global-styles": "^3.0.1",
+    "@hashicorp/nextjs-scripts": "^17.0.0",
+    "@hashicorp/react-button": "^5.0.0",
+    "@hashicorp/react-code-block": "^4.0.0",
+    "@hashicorp/react-docs-page": "^13.0.2",
+    "@hashicorp/react-hashi-stack-menu": "^2.0.0",
+    "@hashicorp/react-head": "^2.0.0",
     "@hashicorp/react-product-downloader": "4.1.5",
-    "@hashicorp/react-search": "^3.0.0",
-    "@hashicorp/react-section-header": "4.0.0",
-    "@hashicorp/react-subnav": "7.1.0",
-    "@hashicorp/react-vertical-text-block-list": "4.0.1",
+    "@hashicorp/react-search": "^5.0.0",
+    "@hashicorp/react-section-header": "^5.0.0",
+    "@hashicorp/react-subnav": "^8.0.0",
+    "@hashicorp/react-vertical-text-block-list": "^5.0.0",
     "next": "10.0.6",
     "next-mdx-remote": "2.1.3",
     "next-remote-watch": "^0.3.0",
