--- a/website/package.json
+++ b/website/package.json
@@ -5,24 +5,26 @@
   "author": "HashiCorp",
   "dependencies": {
     "@hashicorp/mktg-global-styles": "^3.0.1",
-    "@hashicorp/nextjs-scripts": "^17.0.0",
-    "@hashicorp/react-button": "^5.0.0",
-    "@hashicorp/react-code-block": "^4.0.0",
-    "@hashicorp/react-docs-page": "^13.0.2",
-    "@hashicorp/react-hashi-stack-menu": "^2.0.0",
-    "@hashicorp/react-head": "^2.0.0",
+    "@hashicorp/nextjs-scripts": "^18.0.0",
+    "@hashicorp/react-button": "^5.0.1",
+    "@hashicorp/react-code-block": "^4.0.1",
+    "@hashicorp/react-docs-page": "^13.1.4",
+    "@hashicorp/react-hashi-stack-menu": "^2.0.2",
+    "@hashicorp/react-head": "^3.0.2",
     "@hashicorp/react-product-downloader": "4.1.5",
-    "@hashicorp/react-search": "^5.0.0",
-    "@hashicorp/react-section-header": "^5.0.0",
-    "@hashicorp/react-subnav": "^8.0.0",
-    "@hashicorp/react-vertical-text-block-list": "^5.0.0",
-    "next": "10.0.6",
-    "next-mdx-remote": "2.1.3",
-    "next-remote-watch": "^0.3.0",
+    "@hashicorp/react-product-downloads-page": "^2.0.0",
+    "@hashicorp/react-search": "^5.0.2",
+    "@hashicorp/react-section-header": "^5.0.1",
+    "@hashicorp/react-subnav": "^8.1.0",
+    "@hashicorp/react-vertical-text-block-list": "^6.0.1",
+    "next": "10.1.3",
+    "next-mdx-remote": "2.1.4",
+    "next-remote-watch": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.3",
     "dart-linkcheck": "2.0.15",
     "husky": "4.3.6",
     "prettier": "2.2.1"
