--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "@hashicorp/react-search": "^5.0.2",
     "@hashicorp/react-section-header": "^5.0.1",
     "@hashicorp/react-subnav": "^8.1.0",
+    "@hashicorp/react-tabs": "^6.0.0",
     "@hashicorp/react-vertical-text-block-list": "^6.0.1",
     "next": "10.1.3",
     "next-mdx-remote": "2.1.4",
